fix alignment of header navigation

--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 .header {
-  position: fixed;
   background-color: #00b530;
   height: 60px;
   width: 100%;
@@ -14,13 +13,12 @@
 }
 
 .header .navigation .logo {
-  width: 13%;
   height: 90%;
 }
 
 .header .navigation .nav-links {
   height: 90%;
-  width: 40%;
+  width: 45%;
   display: flex;
   justify-content: space-around;
 }
@@ -88,7 +86,7 @@
 
 /* Icon 1 */
 
-.animated-icon1, .animated-icon2, .animated-icon3 {
+/* .animated-icon1, .animated-icon2, .animated-icon3 {
     width: 30px;
     height: 20px;
     position: relative;
@@ -166,9 +164,9 @@
     -o-transform: rotate(-135deg);
     transform: rotate(-135deg);
   }
-  
+   */
   /* Icon 3*/
-  
+/*   
   .animated-icon2 span:nth-child(1) {
     top: 0px;
   }
@@ -206,10 +204,10 @@
     width: 0%;
     left: 50%;
   }
-  
+   */
   /* Icon 4 */
   
-  .animated-icon3 span:nth-child(1) {
+  /* .animated-icon3 span:nth-child(1) {
     top: 0px;
     -webkit-transform-origin: left center;
     -moz-transform-origin: left center;
@@ -254,36 +252,48 @@
     transform: rotate(-45deg);
     top: 21px;
     left: 8px;
-  }
+  } */
 
 /* social media icons styling */
+
+
 .social-icons {
     font-size: 36px;
     cursor: pointer;
-    padding-top: 20px;
-    margin-top: 20px;
-   
-}
-
-.fa-facebook:hover,.fa-instagram:hover,.fa-twitter:hover {
-    color: red;
-}
-
-.fab {
-    color: white;
 }
 
 /* footer styling */
-#footer {
-    background-color: green;
-    text-align: right;
-   
-
-    
+footer {
+    background-color: #00b530;
+    text-align: center;
 }
 
 .credit {
   text-align: center;
   font-size: 1rem;
   color: white;
+}
+
+.fab {
+  color: white;
+}
+
+.fa-facebook:hover,.fa-instagram:hover,.fa-twitter:hover {
+  color: red;
+}
+
+
+/* END MODAL STYLE */
+
+/* FOR MOBILE */
+@media screen and (max-width: 800px) {
+  .header .navigation .nav-links {
+    display: none;
+  }
+}
+/* FOR DESKTOP */
+@media screen and (min-width: 801px) {
+  .header .navigation .nav-icons a:last-of-type {
+    display: none;
+  }
 }
